Gap between wave and dashboard-img fix

--- a/public/css/index-styles.css
+++ b/public/css/index-styles.css
@@ -1558,6 +1558,9 @@
     margin-top: 2rem;
     margin-bottom: 1.9rem;
   }
+  /* .dashboard-img {
+    margin-bottom: -1px;
+  } */
 }
 
 /* Small Mobile (below 320px) */
